--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11343,7 +11343,7 @@ p {
   }
 }
 
-/* testmonial card */
+/* community card */
 .community-card {
   display: -webkit-box;
   display: -ms-flexbox;
